--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,11 +1,20 @@
 <template name="home">
-    <div class="container">
-        <h1>Welcome to Meteor! Paul II und Marcel und Wolf</h1>
-        {{> hello}}
+    <div class='stage'>
+
+        <div class="stagecontent">
+
+            <h1>Welcome to Meteor! Paul und Marcel und Wolf</h1>
+
+            {{> hello}}
+
+        </div>
+
     </div>
 </template>
 
+
 <template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+    <button class="button button--wayra button--border-medium button--text-upper button--size-s button--text-thick button--inverted">Click Me</button>
+    <p>You've pressed the button {{counter}} times.</p>
 </template>
+
