Renzo added again

--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -3,7 +3,7 @@
 
         <div class="stagecontent">
 
-            <h1>Welcome to Meteor! Paul und Marcel und Wolf</h1>
+            <h1>Welcome to Meteor! Paul und Marcel und Wolf und Renzo</h1>
 
             {{> hello}}
 
